--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
+    #jdbc:h2:~/tw/test
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
+      #update
   h2:
     console:
       enabled: true
